<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">


    <androidx.cardview.widget.CardView
        android:elevation="8dp"
        android:layout_marginVertical="20dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/profile"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/profile"
                android:layout_width="80dp"
                android:layout_height="80dp"/>

            <TextView
                android:id="@+id/name"
                android:text="@string/name"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/profile"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/name1"
                android:text="@string/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/profile"
                app:layout_constraintStart_toEndOf="@+id/name"
                android:layout_marginLeft="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/lastname"
                android:text="@string/lastname"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/lastname1"
                android:text="@string/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/name"
                app:layout_constraintStart_toEndOf="@+id/lastname"
                android:layout_marginLeft="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/birthdate"
                android:text="@string/birthdate"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/lastname"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/birthdate1"
                android:text="@string/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/lastname"
                app:layout_constraintStart_toEndOf="@+id/birthdate"
                android:layout_marginLeft="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/email"
                android:text="@string/email"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/birthdate"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/email1"
                android:text="@string/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/birthdate"
                app:layout_constraintStart_toEndOf="@+id/birthdate"
                android:layout_marginLeft="10dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/gender"
                android:text="@string/gender"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/gender1"
                android:text="@string/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toEndOf="@+id/birthdate"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/noti"
                android:text="@string/notifications"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/gender"
                app:layout_constraintStart_toStartOf="parent"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/noti1"
                android:text="@string/createAccount"
                app:layout_constraintTop_toBottomOf="@+id/gender"
                app:layout_constraintStart_toEndOf="@+id/birthdate"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>